Fixed spacing on nav bar.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,12 +2,17 @@ header {
   display: flex;
   position: fixed;
   width: 100%;
-  height: 60px;
+  height: 70px;
   font-size: 14px;
   font-weight: bold;
   background-color: white;
   font-family: Verdana;
   border-bottom: 1px solid black;
+  margin: 0;
+}
+
+body {
+  margin: 0;
 }
 
 .logo {
@@ -17,7 +22,7 @@ header {
 
 .title {
   color: mediumaquamarine;
-  padding: 20px 0 0 10px;
+  padding: 25px 0 0 10px;
   width: 80px;
 }
 
